--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "cat-dialog",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "",
-  "main": "./src/dialog.js",
+  "main": "./dist/dialog.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node node_modules/.bin/cat-server",
+    "pre-publish": "node node_modules/.bin/pre-publish"
   },
-  "keywords": [
-    "dialog",
-    "react"
-  ],
   "author": "yanweiqing",
   "license": "MIT",
-  "dependencies": {
-    "cat-util": "^1.x",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
-  },
   "files": [
-    "src/",
+    "assets/",
     "dist/",
-    "assets",
-    "examples/"
-  ]
+    "examples/",
+    "src/"
+  ],
+  "dependencies": {
+    "cat-util": "^1.0.8",
+    "myui-core": "^0.1.0",
+    "react": "^0.14.x",
+    "react-dom": "^0.14.x"
+  },
+  "devDependencies": {
+    "regether-rc-server": "^0.1.1"
+  }
 }
